my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EBITRN/T_EBITRN-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EBITRN_STRUCT_H
#define T_EBITRN_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EBITRN(void);


#endif /* not T_EBITRN_STRUCT_H */
